--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
           </ul>
         </div>
         <div class="inner-container">
-          <h2>ACCOMPLISHMENT</h2>
+          <h2>ACCOMPLISHMENTS</h2>
           <ul id="accomplishment-content" class="disappear">
             <li>University of Windsor Dean's Honour Roll</li>
             <li>Python Winter Coding Camp 2021</li>
